# drawinganalyses

./: README.md  environment.yml  pyproject.toml  requirements.txt
drawinganalyses/: config.py
drawinganalyses/datasets/: drawing.py  drawing_collection.py  drawings_pytorch.py
drawinganalyses/models/: pytorch_models.py
drawinganalyses/scripts/: artists_classification_training.py  humans_classifcation.py  molly_explicability.py  molly_training.py  run_interpretability.py  run_training.py
drawinganalyses/utils/: Humans_data_formatting.py  artist_classification_formatting.py  humans_data_formatting.py  molly_data_formatting.py  statistics.py  utils.py  visualization.py
notebooks/: Captum_export_images.ipynb  Explainability_Humans.ipynb  Interpretability.ipynb  Test_pyfeats.ipynb  analysis_explainability.ipynb  example_molly.ipynb  examples_artists.ipynb  feature_extraction.ipynb  finetuning_artists.ipynb  full_example_artists.ipynb  matrix_pred.ipynb  model_train.ipynb
